KNIME-1400 RDKit Feature Updates for KNIME 4.6 (#119)
* KNIME-1400: RDKit feature adaptions for KNIME 4.6

- Jenkinsfile and pom.xml file update (partly temporarily)
- Switched to Tycho 2.7.3 and JDK 17
- Updated dependencies to KNIME 4.6+
- Replaced most deprecated methods
- Code improvements to fix Eclipse warnings and remove unused elements
that caused warnings
- Changed ant scripts to support JDK 17 with JavaScript
- Added target platform definition for KNIME 4.6
- Fixed Jenkinsfile post processing
- Updating launch files for testing and building for 4.6
- Adding helper file for local Windows OWASP check
- Switched to new KNIME 4.6 NIBR Dev environment for building

* KNIME-1400: Switch gson import from lib to plugin

* KNIME-1400: Removed gson-2.10.jar file

* KNIME-1400: Jenkinsfile uses JAVA_VERSION for building